lambda-appsync-proc/tests/fail/invalid_operation_arg_override.stderr
error: No argument `invalidArg` in operation `Query::player`
 --> tests/fail/invalid_operation_arg_override.rs:7:34
  |
7 |     type_override = Query.player.invalidArg: String,
  |                                  ^^^^^^^^^^
